styles.css
html,
body {
  margin: 0;
  padding: 0;
  font-family: 'inconsolata', 'Times New Roman', Times, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  color: var(--font-color);
  background-color: var(--background-container);
  scroll-padding-top: 4em;
  scroll-margin-top: 4em;
  scroll-behavior: smooth;
}

:root {
  --background-container: #1b1a17;
  --background-box: #1f1e1b;
  --heading-color: #a35709;
  --background-symbol: #ff8303;
  --font-color: #f0e3ca;
  --background-button: #2e2d29;
  --background-button-hover: #49463c;
}

/* * {
  text-shadow: 2px 1px 1px rgba(212, 200, 178, 0.2);
} */

img {
  position: relative;
  top: 10px;
  width: 30%;
  height: 60%;
}

header {
  margin: 0;
  padding: 0 1.5em 0 0;
  position: fixed;
  top: 0;
  background-color: var(--background-container);
  z-index: 1500;
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
}

.logo {
  margin: 0;
  padding: 0;
  justify-content: center;
  display: flex;
  align-items: center;
  font-size: 1.3rem;
  box-sizing: border-box;
}

#my-works-all {
  margin: 2em 0 0 0;
  display: flex;
  flex-direction: column;
}

footer > h2 {
  color: var(--background-symbol);
  margin-left: 15px;
  text-align: center;
  margin-top: 100px;
}

.logo > h2 {
  display: flex;
  align-items: center;
  color: var(--background-symbol);
  margin: 0;
}

.headline-a > h2 {
  margin: 0;
  color: var(--font-color);
  font-size: 1.5rem;
}

.headline-a > a {
  text-decoration: none;
  box-shadow: 0 0 10px 5px rgba(255, 0, 0, 0.2);
  color: var(--font-color);
  border: 1px solid var(--background-symbol);
  border-radius: 10px;
  padding: 0.5em;
  animation: border-rotate 4s linear infinite;
}

@keyframes border-rotate {
  0% {
    border-color: var(--background-symbol);
  }

  25% {
    border-color: #ffdf00;
  }

  50% {
    border-color: #f00;
  }

  75% {
    border-color: var(--background-symbol);
  }

  100% {
    border-color: #f00;
  }
}

.author > h2 {
  color: var(--background-symbol);
  text-align: center;
  margin: 0;
  padding: 0;
  margin-top: 2em;
  font-size: 2.5rem;
}

ul .blog > h2 {
  color: var(--heading-color);
  margin: 0;
  margin-top: 2em;
  font-size: 2rem;
  z-index: 1000;
}

#my-works-all > h2 {
  text-align: center;
  font-size: 2.5rem;
  color: var(--background-symbol);
  margin-top: 2em;
}

h2 > span {
  color: var(--font-color);
}

.blog > a {
  width: 60%;
  text-decoration: none;
}

.contact-a ul li > a {
  text-decoration: none;
  color: var(--background-symbol);
  display: flex;
  flex-direction: row;
}

.hamburger-ico > i {
  margin: 0;
  padding: 0;
  position: relative;
  right: 0.5em;
}

.contact-all a h3 > i {
  margin-right: 1.5em;
  color: var(--font-color);
  font-size: 1.5rem;
}

.contact-all a h3 > .discord {
  fill: #fff;
  position: relative;
  right: 5px;
}

.contact-all a h3 > .liked {
  fill: #fff;
  mix-blend-mode: normal;
  position: relative;
  right: 3px;
}

.skill-logo > .html:hover path {
  fill: #fc490b;
  transition: 0.4s;
}

.skill-logo > .css:hover path {
  fill: #2196f4;
  transition: 0.4s;
}

.skill-logo > .js:hover path {
  fill: #ffdf00;
  transition: 0.4s;
}

.skill-logo > .sass:hover path {
  fill: #ca669b;
  transition: 0.4s;
}

.skill-logo > .git:hover path {
  fill: #f25234;
  transition: 0.4s;
}

.contact-all a h3 > .liked:hover path {
  fill: #ff8303;
  transition: 1s;
}

.contact-a ul li a h3 > i:hover {
  color: var(--background-symbol);
  transition: 1s;
}

.blog > h3 {
  width: 80%;
  margin: 0;
  margin-left: 1.5em;
  line-height: 4;
  border-bottom: 1px solid var(--background-symbol);
  text-align: center;
  font-size: 1rem;
}

.contact-a a > h3 {
  display: flex;
  justify-content: start;
  align-items: center;
}

button > span {
  position: relative;
  bottom: 1px;
}

.skill-logo > span {
  margin-left: 0.7em;
  color: var(--font-color);
  font-size: 1.8rem;
  font-family: 'Inconsolata', 'Times New Roman', Times, serif;
  font-weight: 500;
}

.contact-a a h3 > span {
  display: flex;
  align-items: center;
  justify-content: start;
  margin-left: 1.2em;
  font-size: 1.2rem;
}

.contact-a a h3 > .discord {
  fill: #fff;
}

.contact-a a h3 > .discord:hover path {
  fill: #ff8303;
  transition: 1s;
}

.contact-a > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.contact-b ul li a h3 > i:hover {
  color: var(--background-symbol);
  transition: 1s;
}

.contact-b ul li > a {
  text-decoration: none;
  color: var(--background-symbol);
  display: flex;
  flex-direction: row;
}

.contact-b > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

nav {
  padding: 0;
  margin: 0;
  display: flex;
}

.hamburger-menu {
  width: 50%;
  position: absolute;
  left: 0;
  top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(27, 26, 23, 0.9);
  transition: all 0.5s ease;
  margin: 0;
  padding: 0;
}

/* dropdown menu */

.hamburger-menu > ul {
  color: var(--font-color);
  list-style: none;
  font-size: 2.5rem;
  line-height: 2;
  cursor: pointer;
  margin: 0;
  padding: 0;
}

.hamburger-menu ul > li {
  margin: 0;
  padding: 0;
  list-style: none;
}

.hamburger-menu ul li > a {
  color: var(--font-color);
  text-decoration: none;
  margin: 0;
  padding: 0;
}

.hamburger-menu ul li > a:hover {
  color: var(--background-symbol);
  cursor: pointer;
  transition: 1s;
}

.hamburger-menu ul li > a:focus {
  color: var(--background-symbol);
  cursor: pointer;
  outline: none;
}

.hamburger-ico {
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--font-color);
  font-size: 1.5rem;
  cursor: pointer;
  z-index: 500;
  margin: 0;
  padding: 0;
}

/* For the java scripts */

.active {
  transform: translate(0, -100%);
}

.container {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  box-sizing: border-box;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
}
/* ... */

